Note that iconName requires QApplication

Task-number: QTBUG-37083
Change-Id: I3091776f4b4643136e67c9521efddb5462657d06
Reviewed-by: J-P Nurmi <jpnurmi@qt.io>